--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/saathiDatabase
+MONGODB_URI=mongodb+srv://PrateekAchhu:prateek2004@saathi.rkzuyoc.mongodb.net/Saathi?retryWrites=true&w=majority&appName=Saathi
 JWT_SECRET=a1b2c3d4e5f6g7h8
