--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://PrateekAchhu:prateek2004@saathi.rkzuyoc.mongodb.net/Saathi?retryWrites=true&w=majority&appName=Saathi
 JWT_SECRET=a1b2c3d4e5f6g7h8
+FRONTEND_URL=https://saathi-website-production.up.railway.app
