--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://PrateekAchhu:prateek8867@saathi.bdif5ju.mongodb.net/saathidatabase?retryWrites=true&w=majority&appName=Saathi
+MONGODB_URI=mongodb://mongo:PiBRVecOITRpNRUItnLNvmCGeFVTGNRq@mongodb.railway.internal:27017
 JWT_SECRET=a1b2c3d4e5f6g7h8
 FRONTEND_URL=https://saathi-website-blue.vercel.app
