--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://PrateekAchhu:prateek8867@saathi.rkzuyoc.mongodb.net/saathidatabase?retryWrites=true&w=majority&appName=Saathi
 
 JWT_SECRET=a1b2c3d4e5f6g7h8
-FRONTEND_URL=https://saathi-website-blue.vercel.app
+FRONTEND_URL=https://saathi-website.onrender.com
